--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.datasource.url=jdbc:mysql://localhost:3306/issue_tracker
+spring.datasource.username=root
+spring.jpa.show-sql=true
+server.error.include-stacktrace=never
+server.error.include-message=always
