--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.datasource.username=root
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 server.error.include-message=always
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+#spring.datasource.url=jdbc:postgresql://localhost:5432/sourcery
+#spring.jpa.properties.hibernate.default_schema=sourcery
+#spring.flyway.schemas=sourcery
+#auth.secret=top-secret
+#auth.expirationInMinutes=5
