--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,12 @@ spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 server.error.include-message=always
 
+auth.secret=top-secret
+auth.expirationInMinutes=5
+
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.username=postgres
 #spring.datasource.password=password
 #spring.datasource.url=jdbc:postgresql://localhost:5432/sourcery
 #spring.jpa.properties.hibernate.default_schema=sourcery
 #spring.flyway.schemas=sourcery
-#auth.secret=top-secret
-#auth.expirationInMinutes=5
