--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ server.error.include-message=always
 auth.secret=top-secret
 auth.expirationInMinutes=5
 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.username=postgres
 #spring.datasource.password=password
