--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.datasource.username=root
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 server.error.include-message=always
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
 
 auth.secret=top-secret
 auth.expirationInMinutes=60
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
-
+#TODO: Check if any more properties are needed:
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.username=postgres
 #spring.datasource.password=password
