--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.error.include-message=always
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
 
 auth.secret=top-secret
-auth.expirationInMinutes=60
+auth.expirationInMinutes=3600
 
 #TODO: Check if any more properties are needed:
 #spring.datasource.driver-class-name=org.postgresql.Driver
