--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/issue_tracker
+spring.datasource.url=jdbc:mysql://35.189.201.192/Issue_Tracker
 spring.datasource.username=root
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
