--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://35.189.201.192/Issue_Tracker
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://issuetrackerserver.mysql.database.azure.com:3306/issueTracker?serverTimezone=UTC
+spring.datasource.username=verysecure_admin@issuetrackerserver
+spring.datasource.password=Jaunystesg1014
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 server.error.include-message=always
