--- a/.github/workflows/main_issuetrackerbackend.yml
+++ b/.github/workflows/main_issuetrackerbackend.yml
@@ -22,7 +22,7 @@ jobs:
           java-version: '11'
 
       - name: Build with Gradle
-        run:  ./gradlew clean build
+        run:  gradle install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
