install is not a thing

--- a/.github/workflows/main_issuetrackerbackend.yml
+++ b/.github/workflows/main_issuetrackerbackend.yml
@@ -22,7 +22,7 @@ jobs:
           java-version: '11'
 
       - name: Build with Gradle
-        run:  gradle install
+        run:  gradle build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
