--- a/.github/workflows/main_IssuetrackerBE.yml
+++ b/.github/workflows/main_IssuetrackerBE.yml
@@ -47,7 +47,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'issuetrackerbackend'
+          app-name: 'issuetrackerBE'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_82EFC1EB72CD4EC186D3D7F72213FF4D }}
           package: '*.jar'
