--- a/.github/workflows/main_IssuetrackerBE.yml
+++ b/.github/workflows/main_IssuetrackerBE.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - issuetrackerbackend
+name: Build and deploy JAR app to Azure Web App - IssuetrackerBE
 
 on:
   push:
@@ -21,14 +21,14 @@ jobs:
         with:
           java-version: '11'
 
-      - name: Build with Gradle
-        run:  gradle build
+      - name: Build with Maven
+        run: gradle build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/build/libs/*.jar'
+          path: '${{ github.workspace }}/build/libs/*jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,7 +47,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'issuetrackerBE'
+          app-name: 'IssuetrackerBE'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_82EFC1EB72CD4EC186D3D7F72213FF4D }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DF038F0123CA4B2594386AAE66D09F74 }}
           package: '*.jar'
